_build/include/qmckl.h


typedef int64_t qmckl_context ;
typedef int32_t qmckl_exit_code;
qmckl_exit_code
qmckl_context_touch (const qmckl_context context);
qmckl_context qmckl_context_create();
qmckl_context qmckl_context_copy(const qmckl_context context);
qmckl_exit_code
qmckl_context_destroy (const qmckl_context context);
qmckl_exit_code qmckl_dgemm (
      const qmckl_context context,
      const char TransA,
      const char TransB,
      const int64_t m,
      const int64_t n,
      const int64_t k,
      const double alpha,
      const double* A,
      const int64_t lda,
      const double* B,
      const int64_t ldb,
      const double beta,
      double* const C,
      const int64_t ldc );
qmckl_exit_code qmckl_dgemm_safe (
      const qmckl_context context,
      const char TransA,
      const char TransB,
      const int64_t m,
      const int64_t n,
      const int64_t k,
      const double alpha,
      const double* A,
      const int64_t size_max_A,
      const int64_t lda,
      const double* B,
      const int64_t size_max_B,
      const int64_t ldb,
      const double beta,
      double* const C,
      const int64_t size_max_C,
      const int64_t ldc );
qmckl_exit_code qmckl_adjugate (
      const qmckl_context context,
      const int64_t n,
      const double* A,
      const int64_t lda,
      double* const B,
      const int64_t ldb,
      double* det_l );
qmckl_exit_code qmckl_adjugate_safe (
      const qmckl_context context,
      const int64_t n,
      const double* A,
      const int64_t size_max_A,
      const int64_t lda,
      double* const B,
      const int64_t size_max_B,
      const int64_t ldb,
      double* det_l );
qmckl_exit_code qmckl_dgemv (
      const qmckl_context context,
      const char Trans,
      const int64_t m,
      const int64_t n,
      const double alpha,
      const double* A,
      const int64_t lda,
      const double* X,
      const int64_t incx,
      const double beta,
      double* const Y,
      const int64_t incy);
qmckl_exit_code qmckl_dger (
      const qmckl_context context,
      const int64_t m,
      const int64_t n,
      const double alpha,
      const double* X,
      const int64_t incx,
      const double* Y,
      const int64_t incy,
      double* const A,
      const int64_t lda);
qmckl_exit_code qmckl_distance_sq (
      const qmckl_context context,
      const char transa,
      const char transb,
      const int64_t m,
      const int64_t n,
      const double* A,
      const int64_t lda,
      const double* B,
      const int64_t ldb,
      double* const C,
      const int64_t ldc );
qmckl_exit_code qmckl_distance (
      const qmckl_context context,
      const char transa,
      const char transb,
      const int64_t m,
      const int64_t n,
      const double* A,
      const int64_t lda,
      const double* B,
      const int64_t ldb,
      double* const C,
      const int64_t ldc );
qmckl_exit_code qmckl_distance_rescaled (
      const qmckl_context context,
      const char transa,
      const char transb,
      const int64_t m,
      const int64_t n,
      const double* A,
      const int64_t lda,
      const double* B,
      const int64_t ldb,
      double* const C,
      const int64_t ldc,
      const double rescale_factor_kappa );
qmckl_exit_code qmckl_ao_polynomial_transp_vgl (
      const qmckl_context context,
      const double* X,
      const double* R,
      const int32_t lmax,
      int64_t* n,
      int32_t* const L,
      const int64_t ldl,
      double* const VGL,
      const int64_t ldv );
qmckl_exit_code qmckl_ao_polynomial_hessian (
      const qmckl_context context,
      const double* X,
      const double* R,
      const int32_t lmax,
      int64_t* n,
      double* const hessian );
qmckl_exit_code
qmckl_get_ao_basis_ao_hessian(qmckl_context context,
                          double* const ao_hessian,
                          const int64_t size_max);