_build/include/qmckl_f.F90


    integer (qmckl_context), intent(in)  , value :: context
    real    (c_double ) , intent(in)          :: X(3)
    real    (c_double ) , intent(in)          :: R(3)
    integer (c_int32_t) , intent(in)  , value :: lmax
    integer (c_int64_t) , intent(inout)        :: n
    integer (c_int64_t) , intent(in)  , value :: ldl
    integer (c_int64_t) , intent(in)  , value :: ldv
    integer (c_int32_t) , intent(out)         :: L(ldl,n)
    real    (c_double ) , intent(out)         :: VGL(ldv,5)

  end function qmckl_ao_polynomial_transp_vgl
end interface

interface
  integer(qmckl_exit_code) function qmckl_ao_polynomial_hessian &
      (context, X, R, lmax, n, hessian) &
      bind(C)
    use qmckl_constants
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    real    (c_double ) , intent(in)          :: X(3)
    real    (c_double ) , intent(in)          :: R(3)
    integer (c_int32_t) , intent(in)  , value :: lmax
    integer (c_int64_t) , intent(inout)       :: n
    real    (c_double ) , intent(out)         :: hessian(3,4,(lmax+1)*(lmax+2)*(lmax+3)/6)

  end function qmckl_ao_polynomial_hessian
end interface

interface
  integer(qmckl_exit_code) function qmckl_get_ao_basis_ao_hessian(context, ao_hessian, size_max) &
    bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none
    integer (c_int64_t) , intent(in)  , value :: context
    real    (c_double ) , intent(out)         :: ao_hessian(*)
    integer (c_int64_t) , intent(in)  , value :: size_max
  end function
end interface
! C interface                                                    :noexport:

!     #+CALL: generate_f_interface(table=qmckl_dgemm_args,rettyp="qmckl_exit_code",fname="qmckl_dgemm")

!     #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_dgemm &
      (context, TransA, TransB, m, n, k, alpha, A, lda, B, ldb, beta, C, ldc) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    character(c_char  ) , intent(in)  , value :: TransA
    character(c_char  ) , intent(in)  , value :: TransB
    integer (c_int64_t) , intent(in)  , value :: m
    integer (c_int64_t) , intent(in)  , value :: n
    integer (c_int64_t) , intent(in)  , value :: k
    real    (c_double ) , intent(in)  , value :: alpha
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: ldb
    real    (c_double ) , intent(in)  , value :: beta
    integer (c_int64_t) , intent(in)  , value :: ldc
    real    (c_double ) , intent(in)          :: A(lda,*)
    real    (c_double ) , intent(in)          :: B(ldb,*)
    real    (c_double ) , intent(out)         :: C(ldc,*)

  end function qmckl_dgemm
end interface

! C interface                                                    :noexport:

!     #+CALL: generate_f_interface(table=qmckl_dgemm_safe_args,rettyp="qmckl_exit_code",fname="qmckl_dgemm_safe")

!     #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_dgemm_safe &
      (context, TransA, TransB, m, n, k, alpha, A, size_max_A, lda, B, size_max_B, ldb, beta, C, size_max_C, ldc) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    character(c_char  ) , intent(in)  , value :: TransA
    character(c_char  ) , intent(in)  , value :: TransB
    integer (c_int64_t) , intent(in)  , value :: m
    integer (c_int64_t) , intent(in)  , value :: n
    integer (c_int64_t) , intent(in)  , value :: k
    real    (c_double ) , intent(in)  , value :: alpha
    integer (c_int64_t) , intent(in)  , value :: size_max_A
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: size_max_B
    integer (c_int64_t) , intent(in)  , value :: ldb
    real    (c_double ) , intent(in)  , value :: beta
    integer (c_int64_t) , intent(in)  , value :: size_max_C
    integer (c_int64_t) , intent(in)  , value :: ldc
    real    (c_double ) , intent(in)          :: A(lda,*)
    real    (c_double ) , intent(in)          :: B(ldb,*)
    real    (c_double ) , intent(out)         :: C(ldc,*)

  end function qmckl_dgemm_safe
end interface



! #+CALL: generate_f_interface(table=qmckl_adjugate_args,rettyp="qmckl_exit_code",fname="qmckl_adjugate")

! #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_adjugate &
      (context, n, A, lda, B, ldb, det_l) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    integer (c_int64_t) , intent(in)  , value :: n
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: ldb
    real    (c_double ) , intent(inout)        :: det_l
    real    (c_double ) , intent(in)          :: A(lda,*)
    real    (c_double ) , intent(out)         :: B(ldb,*)

  end function qmckl_adjugate
end interface

! C interface

!     #+CALL: generate_f_interface(table=qmckl_adjugate_safe_args,rettyp="qmckl_exit_code",fname="qmckl_adjugate_safe")

!     #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_adjugate_safe &
      (context, n, A, size_max_A, lda, B, size_max_B, ldb, det_l) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    integer (c_int64_t) , intent(in)  , value :: n
    integer (c_int64_t) , intent(in)  , value :: size_max_A
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: size_max_B
    integer (c_int64_t) , intent(in)  , value :: ldb
    real    (c_double ) , intent(inout)        :: det_l
    real    (c_double ) , intent(in)          :: A(lda,*)
    real    (c_double ) , intent(out)         :: B(ldb,*)

  end function qmckl_adjugate_safe
end interface

! C interface                                                    :noexport:

!     #+CALL: generate_f_interface(table=qmckl_dgemv_args,rettyp="qmckl_exit_code",fname="qmckl_dgemv")

!     #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_dgemv &
      (context, Trans, m, n, alpha, A, lda, X, incx, beta, Y, incy) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    character(c_char  ) , intent(in)  , value :: Trans
    integer (c_int64_t) , intent(in)  , value :: m
    integer (c_int64_t) , intent(in)  , value :: n
    real    (c_double ) , intent(in)  , value :: alpha
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: incx
    real    (c_double ) , intent(in)  , value :: beta
    integer (c_int64_t) , intent(in)  , value :: incy
    real    (c_double ) , intent(in)          :: A(lda,*)
    real    (c_double ) , intent(in)          :: X(*)
    real    (c_double ) , intent(out)         :: Y(*)

  end function qmckl_dgemv
end interface

! C interface                                                    :noexport:

!     #+CALL: generate_f_interface(table=qmckl_dger_args,rettyp="qmckl_exit_code",fname="qmckl_dger")

!     #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_dger &
      (context, m, n, alpha, X, incx, Y, incy, A, lda) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    integer (c_int64_t) , intent(in)  , value :: m
    integer (c_int64_t) , intent(in)  , value :: n
    real    (c_double ) , intent(in)  , value :: alpha
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: incx
    integer (c_int64_t) , intent(in)  , value :: incy
    real    (c_double ) , intent(in)          :: X(*)
    real    (c_double ) , intent(in)          :: Y(*)
    real    (c_double ) , intent(inout)       :: A(lda,*)

  end function qmckl_dger
end interface
interface
  integer (qmckl_context) function qmckl_context_touch(context) bind(C)
    use, intrinsic :: iso_c_binding
    import
    integer (qmckl_context), intent(in), value :: context
  end function qmckl_context_touch
end interface

interface
   integer (qmckl_context) function qmckl_context_create() bind(C)
     use, intrinsic :: iso_c_binding
     import
   end function qmckl_context_create
end interface

interface
   integer (qmckl_context) function qmckl_context_copy(context) bind(C)
     use, intrinsic :: iso_c_binding
     import
     integer (qmckl_context), intent(in), value :: context
   end function qmckl_context_copy
end interface

interface
   integer (qmckl_exit_code) function qmckl_context_destroy(context) bind(C)
     use, intrinsic :: iso_c_binding
     import
     integer (qmckl_context), intent(in), value :: context
   end function qmckl_context_destroy
end interface
! Performance

!     This function is more efficient when ~A~ and ~B~ are
!     transposed.

!    #+CALL: generate_f_interface(table=qmckl_distance_sq_args,fname=get_value("Name"))

!    #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_distance_sq &
      (context, transa, transb, m, n, A, lda, B, ldb, C, ldc) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    character(c_char  ) , intent(in)  , value :: transa
    character(c_char  ) , intent(in)  , value :: transb
    integer (c_int64_t) , intent(in)  , value :: m
    integer (c_int64_t) , intent(in)  , value :: n
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: ldb
    integer (c_int64_t) , intent(in)  , value :: ldc
    real    (c_double ) , intent(in)          :: A(lda,*)
    real    (c_double ) , intent(in)          :: B(ldb,*)
    real    (c_double ) , intent(out)         :: C(ldc,n)

  end function qmckl_distance_sq
end interface



! #+CALL: generate_f_interface(table=qmckl_distance_args,fname="qmckl_distance")

! #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_distance &
      (context, transa, transb, m, n, A, lda, B, ldb, C, ldc) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none

    integer (qmckl_context), intent(in)  , value :: context
    character(c_char  ) , intent(in)  , value :: transa
    character(c_char  ) , intent(in)  , value :: transb
    integer (c_int64_t) , intent(in)  , value :: m
    integer (c_int64_t) , intent(in)  , value :: n
    integer (c_int64_t) , intent(in)  , value :: lda
    integer (c_int64_t) , intent(in)  , value :: ldb
    integer (c_int64_t) , intent(in)  , value :: ldc
    real    (c_double ) , intent(in)          :: A(lda,*)
    real    (c_double ) , intent(in)          :: B(ldb,*)
    real    (c_double ) , intent(out)         :: C(ldc,n)

  end function qmckl_distance
end interface

! C interface                                                     :noexport:

!    #+CALL: generate_f_interface(table=qmckl_distance_rescaled_args,fname="qmckl_distance_rescaled")

!    #+RESULTS:

interface
  integer(qmckl_exit_code) function qmckl_distance_rescaled &
      (context, transa, transb, m, n, A, lda, B, ldb, C, ldc, rescale_factor_kappa) &
      bind(C)
    use, intrinsic :: iso_c_binding
    import
    implicit none
